feat/improve logger and commands - add experimental hot reload

--- a/templates/server/ws-code-client.js.template
+++ b/templates/server/ws-code-client.js.template
@@ -1,45 +1,72 @@
-const ws = new WebSocket("ws://%host%:%port%");
-ws.addEventListener("open", () =>{
-    console.log("Connected");
-    ws.send("Hello H!");
-});
-let lastQueryData = {};
-ws.addEventListener('message', function (event) {
-    try {
-        const query = JSON.parse(event.data);
-        if(query.reload) {
-            window.location.reload();
-            return;
-        }
-        if(event.data === lastQueryData) {
-            return;
-        }
-        lastQueryData = event.data;
-        if(query.name) {
-            const componentFactory = Habame.getComponentFactory(query.name);
-            if(!componentFactory) {
-                window.location.reload();
-                return;
-            }
-            if(query.type === 'script') {
-                const controller = eval('('+query.code+')');
-                componentFactory.updateController(controller);
-                return;
-            }
-            if(query.type === 'view') {
-                componentFactory.updateView(query.code);
-                return;
-            }
-            if(query.type === 'style') {
-                const styleNode = document.querySelector("style[data-component='"+ query.name +"']");
-                styleNode.innerHTML = query.code;
-                return;
-            }
+!function() {
+    let lastQueryData = '';
+    let lastQuery = {};
 
-            window.location.reload();
-        }
-        return;
-    }catch(e) {
-        console.log(e)
+    function reload() {
+        window.location.reload(true);
     }
-});
+
+    function connectToHost() {
+        const ws = new WebSocket("ws://%host%:%port%");
+        ws.addEventListener("open", () =>{
+            console.log("Connected");
+            ws.send(JSON.stringify({ hello: true }));
+        });
+        ws.addEventListener('message', function (event) {
+            try {
+                const query = JSON.parse(event.data);
+
+                if(query.reload || (lastQuery.sessionId && lastQuery.sessionId !== query.sessionId)) {
+                    lastQuery = query;
+                    reload();
+                    return;
+                }
+                if(event.data === lastQueryData) {
+                    return;
+                }
+
+                lastQueryData = event.data;
+                lastQuery = query;
+                if(query.name) {
+                    if(!query.experimentalHotReload) {
+                        reload();
+                        return;
+                    }
+                    const componentFactory = Habame.getComponentFactory(query.name);
+                    if(!componentFactory) {
+                        reload();
+                        return;
+                    }
+                    if(query.type === 'script') {
+                        const controller = eval('('+query.code+')');
+                        componentFactory.updateController(controller);
+                        return;
+                    }
+                    if(query.type === 'view') {
+                        componentFactory.updateView(query.code);
+                        return;
+                    }
+                    if(query.type === 'style') {
+                        const styleNode = document.querySelector("style[data-component='"+ query.name +"']");
+                        styleNode.innerHTML = query.code;
+                        return;
+                    }
+
+                    reload();
+                }
+                return;
+            }catch(e) {
+                console.log(e)
+            }
+        });
+
+        ws.addEventListener('close', function() {
+            setTimeout(function() {
+                ws.close();
+                connectToHost();
+            }, 2000);
+        });
+    }
+
+    connectToHost();
+}();
