--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "habame-cli",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.0.19",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node" : ">=16"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,19 +17,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-env": "^7.25.4",
-    "@rollup/plugin-terser": "^0.4.4",
-    "cheerio": "^1.0.0-rc.12",
-    "rollup": "^4.18.0",
-    "terser": "^5.31.6",
-    "ws": "^8.17.0"
-  },
-  "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.25.4",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "minify": "^11.4.0"
+    "cheerio": "^1.0.0-rc.12",
+    "minify": "^11.4.0",
+    "rollup": "^4.18.0",
+    "terser": "^5.31.6",
+    "ws": "^8.17.0"
   }
 }
