--- a/templates/applications/default/hb.config.js.template
+++ b/templates/applications/default/hb.config.js.template
@@ -7,8 +7,9 @@ export default {
         modules: 'src/main.module.js'
     },
     server: {
-        port: 8000,
-        wsPort: 8001
+        port: 3000,
+        wsPort: 3030,
+        experimentalHotReload: true
     },
     plugins: {
         view: [],
