--- a/templates/applications/default/package.json.template
+++ b/templates/applications/default/package.json.template
@@ -2,7 +2,7 @@
   "name": "%projectName%",
   "private": true,
   "type": "module",
-  "version": "1.0.0",
+  "version": "^1.0.0",
   "main": "hb.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
