--- a/templates/applications/default/src/main.js.template
+++ b/templates/applications/default/src/main.js.template
@@ -1,3 +1,3 @@
-const rootApp = Habame.createRoot(document.getElementById('app'));
+const rootApp = Habame.createRoot(document.getElementById('app'), '%projectName%');
 
 rootApp.render('App');
