--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "habame-cli",
-  "version": "0.0.19",
+  "version": "0.0.25",
   "description": "",
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node" : ">=16"
+    "node": ">=16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,8 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^4.1.0",
+    "habame": "^1.0.3",
     "minify": "^11.4.0",
     "rollup": "^4.18.0",
     "terser": "^5.31.6",
